Movies in cards

--- a/todo
+++ b/todo
@@ -1,1 +1,25 @@
-gotta rethink ellipsis paginationn there may be value in getting responsivity to pageSize firstnpageSize being an arbitrary numbernpageSize can change in increments of 1 or select 5 10 20 and All
+#####
+todos
+`````
+group genre variations into a standardized set
+give genres colors
+
+
+
+
+####################
+new comp boilerplate
+````````````````````
+<script setup>
+//TODO
+</script>
+
+<template>
+<!-- todo -->
+</template>
+
+<style scoped>
+/* todo */
+</style>
+
+############
