--- a/todo
+++ b/todo
@@ -1,9 +1,17 @@
 #####
 todos
 `````
+
+level 4: Add a multiselector for one or more years. The options should be all different years for which I have collected movies. Of course, the list should update to show only movies released in any of the chosen years.
+
+level 5: Add a multiselector for one or more genres. The options should be all different genres existing in the list of movies. Since I collected the movies from different sources, some genres are duplicated and don't really match, I expect you to fix this issue to show consistent options. Of course, the list should update to show only movies of any of the chosen genres.
+
 group genre variations into a standardized set
 give genres colors
 
+level 6: I'd like to know at all times what is the average score of ALL the movies that are listed (not considering the pagination), so please show it at the top of the list.
+
+bonus level: Apply nice styling to this UI!
 
 
 
